samples/_failures_safe/1761320783_166592_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_06b3161a.c: In function ‘main’:
./samples/SAFE/__tmp_06b3161a.c:157:17: error: expected declaration or statement at end of input
  157 |                 } else {
      |                 ^
./samples/SAFE/__tmp_06b3161a.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_06b3161a.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_06b3161a.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_06b3161a.c:157:17: error: expected declaration or statement at end of input
